--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.16"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
